restructure wallscroll handling for variable directory structure