@@ -2,11 +2,10 @@ package moe.karpador.room;
 
 import moe.karpador.WallscrollSimulator;
 import org.yaml.snakeyaml.Yaml;
-import processing.core.PApplet;
 import processing.core.PGraphics;
 import processing.core.PVector;
 
-import java.io.*;
+import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.sql.Date;
@@ -21,22 +20,22 @@ import java.util.stream.Collectors;
 public class Room {
     PVector size;
     List<Furniture> furnitures;
-    ArrayList<Wallscroll> wallscrolls;
+    ArrayList<WallscrollPlacement> wallscrollPlacements;
     public boolean changed;
 
     public Room(PVector size, List<Furniture> furnitures) {
         this.size = size;
         this.furnitures = furnitures;
-        wallscrolls = new ArrayList<>();
+        wallscrollPlacements = new ArrayList<>();
     }
 
     public void draw(PGraphics g) {
         drawRoom(g);
-        for(Furniture furniture : furnitures) {
+        for (Furniture furniture : furnitures) {
             furniture.draw(g);
         }
-        for(Wallscroll wallscroll : wallscrolls) {
-            wallscroll.draw(g, getWallPos(wallscroll.side));
+        for (WallscrollPlacement wallscrollPlacement : wallscrollPlacements) {
+            wallscrollPlacement.draw(g, getWallPos(wallscrollPlacement.side));
         }
     }
 
@@ -65,7 +64,7 @@ public class Room {
         g.stroke(0);
         g.strokeWeight(2);
         g.pushMatrix();
-        g.translate(size.x/2, size.y/2, size.z/2);
+        g.translate(size.x / 2, size.y / 2, size.z / 2);
         g.box(size.x, size.y, size.z);
         g.popMatrix();
     }
@@ -75,14 +74,14 @@ public class Room {
         try {
             String config = Files.readString(path);
             Map<String, Object> root = yaml.load(config);
-            List<Wallscroll> wallscrolls = ((List<Map<String, Object>>) root.get("wallscrolls")).stream()
-                    .map(Wallscroll::fromYaml)
+            List<WallscrollPlacement> wallscrollPlacements = ((List<Map<String, Object>>) root.get("wallscrolls")).stream()
+                    .map(WallscrollPlacement::fromYaml)
                     .toList();
             clearWallscrolls();
-            this.wallscrolls.addAll(wallscrolls);
+            this.wallscrollPlacements.addAll(wallscrollPlacements);
             changed = false;
         } catch (IOException e) {
-            System.err.println("Error reading file: '"+path+"'");
+            System.err.println("Error reading file: '" + path + "'");
             e.printStackTrace();
         }
     }
@@ -102,21 +101,21 @@ public class Room {
     private String getWallscrollsConfig() {
         Yaml yaml = new Yaml();
         Map<String, Object> root = new HashMap<>();
-        root.put("wallscrolls", wallscrolls.stream().map(Wallscroll::toYaml).collect(Collectors.toList()));
+        root.put("wallscrolls", wallscrollPlacements.stream().map(WallscrollPlacement::toYaml).toList());
         return yaml.dump(root);
     }
 
-    public void addWallscroll(Wallscroll wallscroll) {
-        this.wallscrolls.add(wallscroll);
+    public void addWallscroll(WallscrollPlacement wallscrollPlacement) {
+        this.wallscrollPlacements.add(wallscrollPlacement);
         changed();
     }
 
     public void clearWallscrolls() {
-        this.wallscrolls.clear();
+        this.wallscrollPlacements.clear();
     }
 
-    public void removeWallscroll(Wallscroll wallscroll) {
-        this.wallscrolls.remove(wallscroll);
+    public void removeWallscroll(WallscrollPlacement wallscrollPlacement) {
+        this.wallscrollPlacements.remove(wallscrollPlacement);
         changed();
     }
 
@@ -131,10 +130,10 @@ public class Room {
             Map<String, Object> root = yaml.load(config);
             return fromYaml(root);
         } catch (IOException e) {
-            System.err.println("Error reading file: '"+path+"'");
+            System.err.println("Error reading file: '" + path + "'");
             e.printStackTrace();
         } catch (ClassCastException e) {
-            System.err.println("File has invalid root structure: '"+path+"'");
+            System.err.println("File has invalid root structure: '" + path + "'");
             e.printStackTrace();
         } catch (IllegalArgumentException e) {
             e.printStackTrace();
@@ -147,7 +146,7 @@ public class Room {
         List<Integer> roomSizeList = (List<Integer>) root.get("size");
         List<Map<String, Object>> furnituresList = (List<Map<String, Object>>) root.get("furnitures");
 
-        if (roomSizeList.size()!=3)
+        if (roomSizeList.size() != 3)
             throw new IllegalArgumentException("room size must contain three integer values [cm]");
         PVector roomSize = new PVector(roomSizeList.get(0), roomSizeList.get(1), roomSizeList.get(2));
 
@@ -156,9 +155,11 @@ public class Room {
         return new Room(roomSize, furnitures);
     }
 
-    public enum WallSide { FRONT("front"), BACK("back"), LEFT("left"), RIGHT("right");
+    public enum WallSide {
+        FRONT("front"), BACK("back"), LEFT("left"), RIGHT("right");
 
         private final String name;
+
         WallSide(String name) {
             this.name = name;
         }
@@ -166,9 +167,9 @@ public class Room {
         public static WallSide fromName(String name) {
             return switch (name) {
                 case "front" -> FRONT;
-                case "back"  -> BACK;
+                case "back" -> BACK;
                 case "right" -> RIGHT;
-                case "left"  -> LEFT;
+                case "left" -> LEFT;
                 default -> throw new IllegalArgumentException("No such WallSide: '" + name + "'");
             };
         }
@@ -181,23 +182,24 @@ public class Room {
             return switch (this) {
                 case FRONT -> RIGHT;
                 case RIGHT -> BACK;
-                case BACK  -> LEFT;
-                case LEFT  -> FRONT;
+                case BACK -> LEFT;
+                case LEFT -> FRONT;
             };
         }
 
         WallSide toLeft() {
             return switch (this) {
                 case FRONT -> LEFT;
-                case LEFT  -> BACK;
-                case BACK  -> RIGHT;
+                case LEFT -> BACK;
+                case BACK -> RIGHT;
                 case RIGHT -> FRONT;
             };
         }
 
         private final static float limit = 0.7071f;
+
         public static WallSide fromFacing(float x, float z) {
-            return    (x > limit)  ? RIGHT
+            return (x > limit) ? RIGHT
                     : (x < -limit) ? LEFT
                     : (z < -limit) ? BACK
                     : FRONT;
